terminado el diseño responsivo, falta los hover y la interacion del JS

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="boton">
       
       <hr>
-      <button><img src="./assets/images/icon-arrow.svg" alt=""></button>
+      <button class="enviar"><img src="./assets/images/icon-arrow.svg" alt=""></button>
 
     </div>
 
